# proj4rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  README_WASM.md  cbindgen.toml  index.html  projections.md  projections.txt
.cargo/: config.toml
.docker/: Dockerfile  ol-proj4rs-test.sh  ol-run.sh
.github/workflows/: docs.yml
benches/: bench_proj.rs
examples/: rsproj.rs
fixtures/: .gitignore
geodesic/: Cargo.toml  build.rs
geodesic/src/: lib.rs
geodesic/src/C/: geodesic.c
js/: .gitignore  README.md  index.html  proj4.js
js/.docker/: Dockerfile  ol-proj4rs-test.sh
js/ol-proj4rs-demo-app/: README.md  codeStyle.css  package.json  reprojection.js  sphere-mollweide.html  vector-projections.html
js/ol-proj4rs-demo-app/assets/js/: proj4.js
js/tests/: test_defs.js  test_index.js
js/tests/nodejs/: proj4rs.js  test_core.js
ol-proj4rs-demo-app/: .gitignore  README.md  index.html  package-lock.json  reprojection-image.html  reprojection-image.js  reprojection.html  sphere-mollweide.html  sphere-mollweide.js  style.css  vector-projections.html  vector-projections.js  vite.config.js  wms-image-custom-proj.html  wms-image-custom-proj.js
proj4rs/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README_WASM.md  index.html
proj4rs-clib/: Cargo.toml  Makefile.toml  proj4rs_c.pc.in  pyproject.toml
proj4rs-clib/examples/: Makefile  test_epsg3035.c
proj4rs-clib/python/: .gitignore
proj4rs-clib/python/proj4rs/: __init__.py
proj4rs-clib/python/tests/: test_all.py
proj4rs-clib/src/: lib.rs
proj4rs-geodesic/: Cargo.toml  README.md  build.rs
proj4rs-geodesic/src/: lib.rs
proj4rs-geodesic/src/C/: geodesic.c  geodesic.h
proj4rs-php/: Cargo.toml  README.md
proj4rs-php/examples/: test_epsg3035.php
proj4rs-php/src/: lib.rs
proj4rs/benches/: bench_proj.rs
proj4rs/examples/: rsproj.rs  rsproj_bench.rs
proj4rs/js/tests/: test_core.js
proj4rs/ol-proj4rs-demo-app/: .gitignore  README.md  vite.docker.js
proj4rs/src/: adaptors.rs  datum_params.rs  datum_transform.rs  datums.rs  ellps.rs  errors.rs  geocent.rs  lib.rs  parameters.rs  parse.rs  proj.rs  projstring.rs  tests.rs  transform.rs
proj4rs/src/adaptors/: geo_types.rs
proj4rs/src/math/: aasincos.rs  mlfn.rs  mod.rs  qsfn.rs  tsfn.rs
proj4rs/src/nadgrids/: catlg.rs  files.rs  grid.rs  header.rs  mod.rs
proj4rs/src/nadgrids/files/: mod.rs  ntv2.rs
proj4rs/src/nadgrids/formats/: geotiff.rs  mod.rs  ntv2.rs
proj4rs/src/projections/: aea.rs  aeqd.rs  cea.rs  eqc.rs  estmerc.rs  etmerc.rs  geocent.rs  geos.rs  krovak.rs  laea.rs  latlong.rs  lcc.rs  merc.rs  mill.rs  mod.rs  moll.rs  stere.rs  sterea.rs
proj4rs/src/wasm/: mod.rs  nadgrids.rs
proj4rs/tests/: proj4js_tests.rs
run-wasm/: Cargo.toml
run-wasm/src/: main.rs
src/: adaptors.rs  cbinding.rs  constants.rs  consts.rs  datum_params.rs  datum_transform.rs  datums.rs  ellipsoids.rs  ellps.rs  errors.rs  geocent.rs  inverse.rs  lib.rs  math.rs  nadgrids.rs  parameters.rs  parse.rs  prime_meridians.rs  proj.rs  projection.rs  projstring.rs  tests.rs  transform.rs  units.rs  utils.rs  wasm.rs
src/adaptors/: geo_types.rs
src/conversions/: axisswap.rs  conversion.rs  convert.rs  mod.rs  noop.rs
src/math/: aasincos.rs  adjlon.rs  auth.rs  gauss.rs  mlfn.rs  mod.rs  msfn.rs  phi2.rs
src/nadgrids/: catalog_st.rs  catlg.rs  catlg_mt.rs  catlg_st.rs  grid.rs  header.rs  mod.rs
src/nadgrids/files/: mod.rs  ntv2.rs
src/nadgrids/parse/: mod.rs  ntv2.rs
src/parser/: mod.rs
src/parser/wkt/: mod.rs
src/projections/: aea.rs  estmerc.rs  etmerc.rs  geocent.rs  geos.rs  laea.rs  latlong.rs  lcc.rs  merc.rs  mod.rs  moll.rs  somerc.rs  stere.rs  sterea.rs  tmerc.rs  utm.rs
src/wasm/: mod.rs  nadgrids.rs
tests/: proj4js_tests.rs
