[workspace]
members = [ 
    "geodesic",
    "proj4rs",
    "proj4rs-clib",
    "proj4rs-php", 
]
resolver = "2"

[workspace.package]
keywords = ["gis", "proj", "projection", "geography", "geospatial"]
authors = ["David Marteau <dmarteau@3liz.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/3liz/proj4rs/"
repository = "https://github.com/3liz/proj4rs/"
categories = ["science::geo"]

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
incremental = false

[patch.crates-io]
# Use local crates
proj4rs = { path = "./proj4rs" }


