[package]
name = "proj4rs-geodesic"
version = "0.1.1"
edition = "2024"
description = "Binding to Geodesic calculation routines"
readme="README.md"
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]

[build-dependencies]
cc = "1.0"

