[package]
name = "proj4rs-php"
version = "0.1.1"
edition = "2024"
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "proj4rs_php"
crate-type = ["cdylib"]

[dependencies]
proj4rs = "~0.1"
ext-php-rs = "0.13"
log = { version = "0.4", optional = true }

[features]
crs-definitions = ["proj4rs/crs-definitions"]
logging = ["log", "proj4rs/logging" ]
