[package]
name = "proj4rs"
version = "0.1.7"
edition = "2021"
description = "Rust adaptation of Proj4"
readme = "../README.md"
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
documentation = "https://docs.rs/proj4rs/"
exclude = [
    "js/*",
    "Makefile.toml",
    "ol-proj4rs-demo-app",
    "fixtures",
    ".docker",
    "PROJ4_General_Parameters.pdf",
    "index.html",
]

[dependencies]
thiserror = "2.0"
crs-definitions = { version = "0.3", optional = true, default-features = false, features = ["proj4"] }
geo-types = { version = "0.7.12", optional = true }
lazy_static = { version = "1", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
approx = "0.5"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

# XXX Defined in workspace
#[profile.release]
#lto = true
#codegen-units = 1
#strip = "debuginfo"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["multi-thread"]
multi-thread = ["lazy_static"]
geo-types = ["dep:geo-types"]
logging = ["log"]
local_tests = []
wasm-strict = []
proj4js-compat = []
with-wasm-entrypoint = []

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_log = "1.0"

[[example]]
name = "rsproj"

[package.metadata.doc.rs]
all-features = true

[package.metadata.wasm-pack.profile.release]
# Fix 'table.fill requires bulk-memory on' error
# Maybe related to https://github.com/rustwasm/wasm-bindgen/issues/4250
# Should be resolved with wasm-bindgen 0.2.95
wasm-opt = ["-O", "--enable-bulk-memory"]
